@@ -14,15 +14,15 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 c14ef107c229a9148f89739761c4ee2e5cf3e881 CHANGES
+SHA1 7a1e58362759e7784818f9fc8ebb557c803fdc91 CHANGES
 SHA1 58d7a00ab2a9f5448a561d49b5a2077efa245ac7 CREDITS
 SHA1 2261acc1a1f1ab8a2907380291dbde2063178aaa FastCalc.xs
-SHA1 c00af0af44a912b550a7e86cd14fbaf0fcc421fc MANIFEST
+SHA1 6ba4004abe70bc4ad4400b60908bd2a4dc0dc668 MANIFEST
 SHA1 b84f4d19c93c52aa32e5145cabce4f7e1ccb85a9 MANIFEST.SKIP
-SHA1 6efb78faddcc6793d98d73a3367caed9f9d8d67c META.json
-SHA1 f86039eaa65d71b467940cea9bf181c28a551960 META.yml
+SHA1 fb707b584c507aa686f12704b3d9c363ab9900ac META.json
+SHA1 07693f805e27cb309e61e85990585c884fdea903 META.yml
 SHA1 c53fc74bf01b828f4e28757c06449110e0e07dd1 Makefile.PL
-SHA1 a1e38089425d81c98d94604ac652fd3ef775cdee README
+SHA1 e3642759d709f62d10e99d8480e0404ec48965c7 README
 SHA1 280c4f82fc9e7322fe2bbed7e5f595bfe9fe7783 TODO
 SHA1 bce3c51bb369419603298064b78e14077b93af66 inc/Module/Install.pm
 SHA1 fe220f215f645500ce8f14ff5e19d9a28692af56 inc/Module/Install/Base.pm
@@ -32,15 +32,15 @@ SHA1 76efdca3603159e0ae0e18f19fe72a0211a69529 inc/Module/Install/Makefile.pm
 SHA1 2e33e87882d60db3913da6284dd5295e5315e18a inc/Module/Install/Metadata.pm
 SHA1 c830b819e61bda5eca077c6291293bba61b3b9f2 inc/Module/Install/Win32.pm
 SHA1 cb52b9d6f88d512d448a6f35ed0af0d1201a134b inc/Module/Install/WriteAll.pm
-SHA1 c9446c3ae64722394f2c671518e29b8b0d50d95d lib/Math/BigInt/FastCalc.pm
+SHA1 92fba9a489974903b661956d4dac9280a252a8c8 lib/Math/BigInt/FastCalc.pm
 SHA1 385cc7ed3bf3e6290640b9880445ca9a3dea629e t/00sig.t
 SHA1 2c720454ea4a111cb2e554a869e66234fafb40a8 t/01load.t
 SHA1 b2ed9206ca5b69ec3b8bbf850bf4b6dfde518e7e t/02pod.t
 SHA1 ae4a4efc6c33e300fb247439451ca2f43ca14014 t/03podcov.t
-SHA1 96dbc74d7c77cf3bf70dd77d7b21fbce44c630b2 t/bigfltpm.inc
-SHA1 0070e90061ff79ba837111e94abecb15f7ebf41a t/bigfltpm.t
+SHA1 9bc755bda3026da5300d62e88bd797ead7366348 t/bigfltpm.inc
+SHA1 7b3711429721f4da07384a81c09bd7f35eb95c0e t/bigfltpm.t
 SHA1 67d03610a42a11a2d8f73358441a8fab18b12103 t/bigintfc.t
-SHA1 ea7f75ed9aa5feae4b1f32ea7a7c2d909f6b68c3 t/bigintpm.inc
+SHA1 7954255fd6b3a4a09b6e47c98a1ed79d40a49e22 t/bigintpm.inc
 SHA1 1b449b2a340930f56abb50128bfdabeb9d993db7 t/bigintpm.t
 SHA1 9914c24f7ac04c96490e0f43e9c8a3f12b565610 t/bootstrap.t
 SHA1 38bf0f7b9949bf4eb746831ecde91841f0118931 t/leak.t
@@ -50,11 +50,11 @@ SHA1 c928400143b454a3a2327f138558ab28f51901a4 t/mbimbf.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJWAFNTAAoJEGcmPl2fr1668+cH/jNX9Jvrnvx6o5wELcKLTTjq
-qv0Uc81W/g6xfq46nXB7cvUOX7GjdFiamvewJB59npi3fv4nTznFgLBCkfnSHpFA
-nz/cWp6qrCxnKa//KwKC9HvRTZQr9l1+dB7s02CU62uKiw2267n9/L0bLil47utT
-bDY8HEM5tKXSz6BYL6bK774LfgeD84terZxmQQKs8ozJXRA8dtYtwZNx9QYNWXsn
-Tnu47ZYrUmxAjOIeXFsePq7mBRZlbRjMc4ucTNOD5tbHYOa+DNjlrZ7FTulQxxaE
-4jyOfKzaFzVwXfs5o1hakxupi5S3a8ZjCP4TU/sY07fiXUh7DsXzfUqlxKqqCOI=
-=9U5Z
+iQEcBAEBAgAGBQJWMmcRAAoJEGcmPl2fr166fSMH/0LLtfcQ4VPuEUVOrLm7mXPB
+qm+Y04Y3K1jNegsggfvl42H2BfozRYL7YuuqDSCzRmH6iCQn3EEC+Iz51S42BpZn
+CpMXVeoeNWYUu0Y8W3sGUjW4hJyk5M835CDcVpupTXCyiUV51DxraBf+HPhsOBoT
+FHP5pi0s/NAtIipTdlpXv4ewYTQWUeuAagr5s22ZN6HsT6Lk/hQ9VMvRwvkoe80w
+JGXjfAOoPCaSZ2GKBGAURkx7JptkpccknTEIHBpAOPmkoPZXdraizCNw9vlMrYUd
+mWmi+GJVK1RF1DLZvWAmMVq7tOPmNXTKOkGvVQXxswgJNqyOXOrXgxDvinlcJ9E=
+=0iPA
 -----END PGP SIGNATURE-----
