@@ -1,5 +1,13 @@
 Revision history for Perl extension Math::BigInt::FastCalc.
 
+2015-10-28 v0.35 pjacklam
+  * Sync test files with Math-BigInt-1.999707.
+  * Update the README file.
+  * Replace 'use vars ...' with 'our ...'. We require a Perl newer than 5.6.0
+    anyway.
+  * Required version of Math-BigInt is now 1.999706.
+  * Move 'Test::More' from 'build_requires' to 'test_requires' in Makefile.PL.
+
 2015-09-21 v0.34 pjacklam
   * Sync test files with Math-BigInt-1.999703.
   * Required version of Math-BigInt is now 1.999703.
